Update package.json with dependencies

--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,21 @@
   "name": "aa-angularjs-dropdown-multiselect",
   "version": "1.5.7",
   "authors": [
-    "Dotan Simha <dotansimha@gmail.com>"
+    "Dotan Simha <dotansimha@gmail.com>",
+    "Jeff Woodard <woodardj85@gmail.com"
   ],
-  "description": "AngularJS Dropdown Multiselect directive - closeOnSelect implemented",
-  "keywords": ["angular", "angularjs", "directive", "dropdown", "multiselect", "checklist", "list", "bootstrap", "checkbox"],
+  "description": "AngularJS Dropdown Multiselect directive",
+  "keywords": [
+    "angular",
+    "angularjs",
+    "directive",
+    "dropdown",
+    "multiselect",
+    "checklist",
+    "list",
+    "bootstrap",
+    "checkbox"
+  ],
   "license": "MIT",
   "main": "src/angularjs-dropdown-multiselect.js",
   "ignore": [
