--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
   "author": "",
-  "name": "angularjs-dropdown-multiselect-demo",
-  "version": "0.0.0",
-  "description": "",
+  "name": "aa-angularjs-dropdown-multiselect",
+  "version": "1.5.7",
+  "description": "AngularJS Dropdown Multiselect directive",
   "homepage": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/t3hprofit/angularjs-dropdown-multiselect.git"
+  },
   "dependencies": {
+    "angular": "^1.4.8",
+    "lodash": "^2.4.1",
     "source-map": "^0.1.34"
   },
   "devDependencies": {
+    "angular-animate": "^1.4.8",
+    "angular-highlightjs": "^0.5.1",
+    "angular-route": "^1.4.8",
+    "angular-sanitize": "^1.4.8",
+    "angular-touch": "^1.4.8",
+    "bootstrap": "^3.3.6",
     "express": "~3.4.4",
     "grunt": "^0.4.5",
     "grunt-build-control": "^0.1.3",
@@ -21,7 +33,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
   "engines": {
     "node": "0.10.10"
   }
